--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.13",
     "sass": "^1.56.2",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vite-svg-loader": "^3.6.0"
   }
 }
